# LearnMetal

./: .gitignore  CMakeLists.txt  Info.plist  ReadMe.md
docs/: Metal_vs_OpenGL.md
src/01_hello_window/: CMakeLists.txt  main.swift
src/02_hello_triangle/: CMakeLists.txt  main.swift
src/03_shaders/: CMakeLists.txt  MetalShader.swift  main.swift
src/04_textures/: CMakeLists.txt  main.swift
src/05_transformations/: CMakeLists.txt  MetalShader.swift  main.swift
